--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 
     <script>
-        $.getJSON( "https://raw.githubusercontent.com/kupolua/vakos/master/DataTable.json", function( data ) {
-        // $.getJSON( "DataTable.json", function( data ) {
+        $.getJSON( "https://raw.githubusercontent.com/kupolua/vakos/master/DataTable-RECEIPTCURR.json", function( data ) {
             $(document).ready(function() {
                 console.log(data);
-                $('#example').DataTable( {
+                $('#RECEIPTCURR').DataTable( {
+                    data: data.dataSet,
+                    columns: data.columns,
+                    "scrollX": true
+                } );
+            } );
+        });
+
+        $.getJSON( "https://raw.githubusercontent.com/kupolua/vakos/master/DataTable-RECEIPTCURRDETAIL.json", function( data ) {
+            $(document).ready(function() {
+                console.log(data);
+                $('#RECEIPTCURRDETAIL').DataTable( {
                     data: data.dataSet,
                     columns: data.columns,
                     "scrollX": true
@@ -30,8 +40,8 @@
 
 <body>
 <div style="width: 100%; margin: 0 auto">
-    <table id="example" class="display nowrap" style="width:100%;">
-    </table>
+    <table id="RECEIPTCURR" class="display nowrap" style="width:100%;"></table>
+    <table id="RECEIPTCURRDETAIL" class="display nowrap" style="width:100%;"></table>
 </div>
 
 
