--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             } );
         });
 
-        $.getJSON( "https://raw.githubusercontent.com/kupolua/vakos/master/DataTable-RECEIPTCURRDETAIL.json", function( data ) {
-            $(document).ready(function() {
-                console.log(data);
-                $('#RECEIPTCURRDETAIL').DataTable( {
-                    data: data.dataSet,
-                    columns: data.columns,
-                    "scrollX": true
-                } );
-            } );
-        });
+        // $.getJSON( "https://raw.githubusercontent.com/kupolua/vakos/master/DataTable-RECEIPTCURRDETAIL.json", function( data ) {
+        //     $(document).ready(function() {
+        //         console.log(data);
+        //         $('#RECEIPTCURRDETAIL').DataTable( {
+        //             data: data.dataSet,
+        //             columns: data.columns,
+        //             "scrollX": true
+        //         } );
+        //     } );
+        // });
 
 
     </script>
